# langchain_work

./: .gitignore  pyproject.toml  readme.md
chap_1_prompt_template/: test.py
chap_2_chatbot_storing_messages/: chains.py  chatbot.md  message.json  tchat.py
chap_3_reading_files/: main.py  prompt.py  redundant_filter_retriever.py
