[tool.poetry]
name = "rag-langchain"
version = "0.1.0"
description = ""
authors = ["Andrew <manloengchung@yahoo.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.1.12"
openai = "^1.14.0"
langchain-community = "^0.0.28"
langchain-openai = "^0.0.8"
chromadb = "^0.4.24"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
